--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <form action="/" method="post">
+    <form action="/" method="post" enctype="multipart/form-data">
         <caption>Envío Información al Back</caption>
         <!--Archivo, descripcion, fecha-->
         <div>
-            <input type="file" name="archivo">
+            <input type="file" name="archivo" >
         </div>
         <div>
             <input type="text" placeholder="Descripción" name="descripcion">
